Closed Bug 1870277 Opened 1 year ago Closed 1 year ago

Include failure message when a feature is marked as failed.

Categories

(Core :: Graphics, defect)

defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox122 --- fixed

People

(Reporter: jrmuizel, Assigned: jrmuizel)

Details

Attachments

(1 file)

This will help us figure out why things are failing in telemetry

This will help us figure out why things are failing in telemetry

Pushed by jmuizelaar@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8fd04cb03fbd Include failure message when a feature is marked as failed. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: