Bug 1870277 - Include failure message when a feature is marked as failed. r=aosmond

This will help us figure out why things are failing in telemetry

Differential Revision: https://phabricator.services.mozilla.com/D196576